<resources>
    <string name="app_name">芝麻律所</string>
    <string name="company">北京****科技公司</string>

    <string name="Search_for_related_legal_content">搜索律师、优质解答</string>
    <string name="quick_consulting">快速咨询</string>
    <string name="quick_consulting_intro">选择最专业律师帮你解答您的疑惑</string>
    <string name="look_lawyer">找律师</string>
    <string name="project_1">打赏咨询</string>
    <string name="project_2">图文咨询</string>
    <string name="project_3">电话咨询</string>
    <string name="project_4">私人律师</string>
    <string name="little_knowledge_of_law">法律小知识</string>
    <string name="high_quality_solutions">优质解答</string>
    <string name="more">更多</string>
    <string name="input_your_question">请输入您想要咨询的问题</string>
    <string name="complete">完成</string>
    <string name="next_step">下一步</string>
    <string name="evaluate">评价</string>
</resources>
