<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:background="@color/burro_primary_ext">

        <ImageView
            android:id="@+id/iv_top_msg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="15dp"
            android:padding="2dp"
            android:src="@drawable/tips_n" />

        <ImageView
            android:id="@+id/search_main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toLeftOf="@id/iv_top_msg"
            android:background="@drawable/index_search_bg" />

        <ImageView
            android:id="@+id/search_iv"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:src="@drawable/search" />

        <TextView
            android:id="@+id/search_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="22dp"
            android:layout_toLeftOf="@id/iv_top_msg"
            android:layout_toRightOf="@id/search_iv"
            android:background="@null"
            android:cursorVisible="false"
            android:gravity="center_vertical"
            android:hint="@string/Search_for_related_legal_content"
            android:singleLine="true"
            android:textSize="14dp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#fefefe">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.youth.banner.Banner
                    android:id="@+id/banner_index"
                    android:layout_width="match_parent"
                    android:layout_height="124dp"
                    app:image_scale_type="fit_xy"
                    app:indicator_drawable_selected="@drawable/banner_select"
                    app:indicator_drawable_unselected="@drawable/banner_unselect"
                    app:indicator_height="3dp"
                    app:indicator_width="10dp"
                    tools:indicator_height="10dp"
                    tools:indicator_margin="5dp"
                    tools:indicator_width="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/rl_project_one"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?listChoiceBackgroundIndicator"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/iv_index_1"
                            android:layout_width="39dp"
                            android:layout_height="39dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="17dp"
                            android:src="@drawable/consult_reward" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_index_1"
                            android:layout_marginBottom="17dp"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text="@string/project_1"
                            android:textColor="#333333"
                            android:textSize="13dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_project_two"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?listChoiceBackgroundIndicator">

                        <ImageView
                            android:id="@+id/iv_index_2"
                            android:layout_width="39dp"
                            android:layout_height="39dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="17dp"
                            android:src="@drawable/consult_pic" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_index_2"
                            android:layout_marginBottom="17dp"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text="@string/project_2"
                            android:textColor="#333333"
                            android:textSize="13dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_project_three"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?listChoiceBackgroundIndicator">

                        <ImageView
                            android:id="@+id/iv_index_3"
                            android:layout_width="39dp"
                            android:layout_height="39dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="17dp"
                            android:src="@drawable/contult_tel" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/iv_index_3"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text="@string/project_3"
                            android:textColor="#333333"
                            android:textSize="13dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_project_four"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?listChoiceBackgroundIndicator">

                        <ImageView
                            android:id="@+id/iv_index_4"
                            android:layout_width="39dp"
                            android:layout_height="39dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="17dp"
                            android:src="@drawable/contult_private" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_index_4"
                            android:layout_marginBottom="17dp"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text="@string/project_4"
                            android:textColor="#333333"
                            android:textSize="13dp" />
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="27dp"
                    android:visibility="gone">


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/divider_" />

                    <ImageView
                        android:id="@+id/iv_tv_a"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/income" />

                    <TextView
                        android:id="@+id/tv_monthIncome_index"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@id/iv_tv_a"
                        android:textSize="17dp"
                        tools:text="本月收入：￥134元" />

                    <ImageView
                        android:id="@+id/iv_arrow_index1"
                        android:layout_width="22dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="4dp"
                        android:src="@drawable/arrow_r_g" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/iv_arrow_index1"
                        android:text="收入详情"
                        android:textColor="@color/burro_primary_ext"
                        android:textSize="17dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="40dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/divider_" />


                    <ImageView
                        android:id="@+id/iv_input_index"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/wallet" />

                    <TextView
                        android:id="@+id/tv_balance_index"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/iv_input_index"
                        android:textSize="17dp"
                        tools:text="我的钱包：￥2066元" />


                    <ImageView
                        android:id="@+id/iv_arrow_index2"
                        android:layout_width="22dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="4dp"
                        android:src="@drawable/arrow_r_g" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/iv_arrow_index2"
                        android:text="提现"
                        android:textColor="@color/burro_primary_ext"
                        android:textSize="17dp"
                        android:visibility="gone" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="17dp">

                    <TextView
                        android:id="@+id/tv_tx"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/full_green_four"
                        android:gravity="center"
                        android:text="提现"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_detail"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/empty_green_four"
                        android:gravity="center"
                        android:text="收入详情"
                        android:textColor="@color/baseColor"
                        android:textSize="18sp" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </FrameLayout>
</LinearLayout>